# Group-Project

./: .gitmodules  ARCHITECTURE.md  COMPLETE_END_TO_END_GUIDE.md  DEBUGGING_NO_INFERENCE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  INSTALL.md  NETWORK_BRIDGE_GUIDE.md  NETWORK_BRIDGE_SUMMARY.md  OFFLINE_DEPLOYMENT.md  OFFLINE_MODE_QUICK_START.md  PACKAGE_CREATION_SUMMARY.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE_NETWORK_BRIDGE.md  README.md  TROUBLESHOOTING_BRIDGE.md  USB_CAMERA_GUIDE.md  YOLO_INTEGRATION_SUMMARY.md  YOLO_VLM_INTEGRATION.md  docker-compose.yml  download_vlm_models.py  main.py  pyproject.toml  requirements.txt  requirements_yolo.txt  setup_yolo_integration.sh  standalone_requirements.txt  standalone_vlm_server.py
configs/: system_config.yaml
ros2_bridge/: diagnose_bridge.py  quick_test.sh  setup.cfg  setup.py
scripts/: complete_hybrid_system.py  moondream2_optimized_prompting.py  moondream2_robot_pipeline.py  moondream2_structured_prompt_system.py  optimized_hybrid_system.py  ros_vision_agent.py  rpi_camera_node.py  test_moondream2_jetson.py  test_moondream2_latest.py  test_moondream2_proper.py  test_moondream2_quantized.py  test_moondream2_strict_jetson.py  test_moondream2_working.py  test_moondream_0.5b.py  vlm_ros_server.py
src/vlm_bridge/: README.md  check_bridge.sh  package.xml  setup.py
src/vlm_bridge/config/: vlm_params.yaml
src/vlm_bridge/launch/: complete_network_bridge.launch.py  network_bridge.launch.py  yolo_vlm_complete.launch.py
src/vlm_bridge/vlm_bridge/: __init__.py  vlm_server.py  yolo_vlm_bridge.py
(+41 files in other folders)
