[project]
name = "moondream2-turtlebot3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "torch>=2.4.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
