<?xml version="1.0"?>
<package format="3">
  <name>vlm_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 bridge for Moondream2 VLM inference</description>
  <maintainer email="vsj23@txstate.edu">Sameer Chowdhury</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
